# src/api/controllers/UserController.ts
@@ -1,9 +1,6 @@
-import { db } from "@database";
 import { UserModel } from "@models";
-import { selectRefreshToken } from "@models/UserModel";
 import { UserService } from "@services";
 import type { Handler } from "express";
-import { v4 } from "uuid";
 
 interface RegisterParams {
 	email: string;
@@ -13,47 +10,71 @@ interface RegisterParams {
 
 export const register: Handler = async (req, res) => {
 	const body = req.body as RegisterParams;
-	await db.transaction(async (tx) => {
 		try {
-			const queryResult = await UserModel.insertUserThrows({
+			// check if user already exists
+			const user = await UserModel.selectUserByEmail(body.email)
+			if (user) {
+				res.status(400).json({
+					message: "User already exists",
+				});
+				return;
+			}
+			// insert user
+			await UserModel.insertUserThrows({
 				email: body.email,
 				name: body.name,
 				password: await Bun.password.hash(body.password),
 			})
-			res.status(201).json(queryResult);
+			// success
+			res.json({
+				message: "User registered successfully",
+				data: {
+					email: body.email,
+					name: body.name,
+				},
+			});
 		} catch (e: any) {
-			tx.rollback();
+			console.log(e);
 			res.status(500).json({
 				message: "Something went wrong",
 				error: e.message,
 			});
+			return;
 		}
-	})
 }
 
-export const login: Handler = async (_req, res) => {
-	
+type LoginParams = {
+	email: string;
+	password: string;
 }
 
-export const refreshToken: Handler = async (req, res) => {
-	if (!req.body.token) {
+export const login: Handler = async (req, res) => {
+	const body = req.body as LoginParams;
+	const user = await UserModel.selectUserByEmail(body.email);
+	if (!user) {
 		res.status(400).json({
 			message: "Bad Request",
-			error: "No token provided",
-		})
+			error: "User not found",
+		});
+		return;
 	}
-	let [{ token }] = await selectRefreshToken.execute({
-		token: req.body.token,
+	const valid = await Bun.password.verify(body.password, user.password);
+	if (!valid) {
+		res.status(400).json({
+			message: "Bad Request",
+			error: "Incorrect password",
+		});
+		return;
+	}
+	// genrate access token
+	const payload = {
+		id: user.id,
+		email: user.email,
+		name: user.name,
+	};
+	const token = UserService.generateAccessToken(payload);
+	res.json({
+		data: payload,
+		token,
 	});
-	if (!token) {
-		res.status(400).json({
-			message: "Bad Request",
-			error: "No token provided",
-		})
-	}
-	//remove the old refreshToken from the refreshTokens list
-	const accessToken = UserService.generateAccessToken ({id: req.body.id})
-	const refreshToken = UserService.generateRefreshToken ({id: req.body.name})
-	//generate new accessToken and refreshTokens
-	res.json ({accessToken: accessToken, refreshToken: refreshToken})
 }
