# src/config/swagger/swagger.json
@@ -5,8 +5,8 @@
     "version": "1.0.0",
 		"description": "Bhagavad Gita API Documentation"
   },
-  "host": "localhost:3000", 
-  "schemes": ["http"],
+  "host": "https://680a-103-190-47-62.ngrok-free.app/", 
+  "schemes": ["https"],
   "paths": {
     "/api/gita/": {
       "get": {
@@ -21,7 +21,12 @@
               }
             }
           }
-        }
+        },
+				"security": [
+					{
+						"Bearer": []
+					}
+				]
       }
     },
     "/api/gita/bab/{bab}": {
@@ -42,7 +47,12 @@
               "$ref": "#/definitions/BAB"
             }
           }
-        }
+        },
+				"security": [
+					{
+						"Bearer": []
+					}
+				]
       }
     },
     "/api/gita/bab/{bab}/slokas": {
@@ -66,7 +76,12 @@
               }
             }
           }
-        }
+        },
+				"security": [
+					{
+						"Bearer": []
+					}
+				]
       }
     },
     "/api/gita/bab/{bab}/sloka/{sloka}": {
@@ -91,6 +106,72 @@
             "description": "Success",
             "schema": {
               "$ref": "#/definitions/Sloka"
+            }
+          }
+        },
+				"security": [
+					{
+						"Bearer": []
+					}
+				]
+      }
+    },
+		"/api/user/register": {
+      "post": {
+        "summary": "Register a new user",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "$ref": "#/definitions/User"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success"
+          }
+        }
+      }
+    },
+    "/api/user/login": {
+      "post": {
+        "summary": "Login a user",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "$ref": "#/definitions/User"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "schema": {
+              "type": "object",
+              "properties": {
+								"data": {
+									"type": "object",
+									"properties": {
+										"id": {
+											"type": "integer"
+										},
+										"email": {
+											"type": "string",
+											"example": "example@email.com"
+										},
+										"name": {
+											"type": "string"
+										}
+									}
+								},
+                "token": {
+                  "type": "string"
+                }
+              }
             }
           }
         }
@@ -134,6 +215,29 @@
           "type": "string"
         }
       }
+    },
+		"User": {
+      "type": "object",
+      "properties": {
+        "email": {
+          "type": "string",
+					"example": "example@email.com"
+        },
+        "password": {
+          "type": "string"
+        },
+				"name": {
+					"type": "string"
+				}
+      }
     }
-  }
+  },
+	"securityDefinitions": {
+		"Bearer": {
+			"type": "apiKey",
+			"name": "Authorization",
+			"in": "header",
+			"description": "JWT Authorization header using the Bearer scheme."
+		}
+	}
 }
